--- a/style.css
+++ b/style.css
@@ -14,9 +14,9 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(background.png);
+    /* background-image: url(portimg3.png);
     background-size: cover;
-    background-position: center;
+    background-position: center; */
 }
 .container{
     padding: 10px 10%;
@@ -64,6 +64,19 @@ margin-top: 20px;
 .header-text h1 span{
     color: #ff004f;
 }
+.mainimg{
+    margin-left: 60%;
+    margin-top: -55vh;
+    
+}
+.mainimg img{
+    position: absolute;
+    width: 35%;
+    height: 35vw;
+    border-radius: 50%;
+}
+
+
 /* --------about---------- */
 #about{
     padding: 80px 0;
@@ -82,6 +95,7 @@ margin-top: 20px;
     border-radius: 15px;
 }
 .about-col-2{
+    padding-top: 15vh;
     flex-basis: 60%;
 }
 .sub-title{
@@ -124,6 +138,13 @@ margin-top: 20px;
     display: block;
 }
 /* services */
+
+#services{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-top: 5vw;
+}
 .services-list{
     display: grid;
     grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
@@ -312,6 +333,19 @@ nav .fa-solid{
     .header-text h1{
         font-size: 30px;
     }
+    .mainimg{
+        margin-left: 15%;
+        margin-top: -60vh;
+        
+    }
+    .mainimg img{
+        position: absolute;
+        width: 60%;
+        height: 60vw;
+        border-radius: 50%;
+    }
+
+
     nav .fa-solid{
         display: block;
         font-size: 25px;
